--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,34 +45,40 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  shared_preferences: ^2.0.7
+  google_sign_in: ^5.0.1
+  cached_network_image: ^3.1.0
+  http: ^0.13.1
+  device_info: ^2.0.0
+  path_provider: ^2.0.1
+  firebase_auth: ^1.0.1
+  firebase_core: ^1.0.2
+  image_picker: ^0.8.1+3
+  flutter_markdown: ^0.6.2
+  animations: ^2.0.0
+  drop_shadow_image: ^0.9.1
+  flutter_svg: ^0.22.0
+  flutter_bloc: ^7.0.1
+  auto_size_text: ^3.0.0-nullsafety.0
+  camera: ^0.9.4+2
+  carousel_slider: ^4.0.0
+  shimmer: ^2.0.0
+  logger: ^1.1.0
+  introduction_screen:
+    git:
+      url: https://github.com/saquibansari0101/introduction_screen
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   # fonts:
   #   - family: Schyler
   #     fonts:
@@ -84,6 +90,3 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
