--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,19 +14,16 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  firebase_core: ^1.17.0
+  firebase_auth: ^3.3.18
   flutter_lints: ^1.0.0
   shared_preferences: ^2.0.7
   google_sign_in: ^5.0.1
+  equatable: ^2.0.3
   cached_network_image: ^3.1.0
   http: ^0.13.1
   device_info: ^2.0.0
   path_provider: ^2.0.1
-  firebase_auth: ^1.0.1
-  firebase_core: ^1.0.2
   image_picker: ^0.8.1+3
   flutter_markdown: ^0.6.2
   animations: ^2.0.0
@@ -34,7 +31,6 @@ dev_dependencies:
   flutter_svg: ^0.22.0
   flutter_bloc: ^7.0.1
   auto_size_text: ^3.0.0-nullsafety.0
-  camera: ^0.9.4+2
   carousel_slider: ^4.0.0
   shimmer: ^2.0.0
   logger: ^1.1.0
@@ -42,6 +38,12 @@ dev_dependencies:
   introduction_screen:
     git:
       url: https://github.com/saquibansari0101/introduction_screen
+  email_validator: ^2.0.1
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
 
 
 flutter:
