--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,13 @@ dependencies:
   shimmer: ^2.0.0
   logger: ^1.1.0
   json_theme: ^3.3.1
+  file_picker: ^4.6.0
+  encrypt: ^5.0.1
   introduction_screen:
     git:
       url: https://github.com/saquibansari0101/introduction_screen
   email_validator: ^2.0.1
+  firebase_storage: ^10.2.17
 
 dev_dependencies:
   flutter_test:
